--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   }
 }
